--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@azure/identity": "^4.13.0",
+    "@azure/storage-file-datalake": "^12.28.1",
     "next": "16.1.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
